* 2012-10-04 - thorben.betten@open-xchange.com

 - Fix for bug 23170: Restored class' path
 - Fix for bug 23172: Proper file name on attachment download

* 2012-10-04 - tobias.friedrich@open-xchange.com

 - Fix for bug 23173: Skip group permissions during owner evaluation 
 - Fix for bug 23171: Query for user- instead of contact-ID to get context administrator 

* 2012-10-04 - francisco.laguna@open-xchange.com

 - Fix for bug 23129: Adjustments to the login step configuration to match google website.

* 2012-10-03 - thorben.betten@open-xchange.com

 - Fix for bug 23169: Sane file name for created ZIP file

* 2012-10-02 - francisco.laguna@open-xchange.com

 - Fix for bug 23130 & bug 23131: Lack of defaults led to RTE. 
 - Fix for bug 23065: Ported MSN subscriber to new version 5 API.

* 2012-10-02 - thorben.betten@open-xchange.com

 - Fix for bug 23155: Added option to disable manual umlauts-filtering
 - Fix for bug 22910: fixed checkconfigconsistency
 - Fix for bug 23162: Respond with 404 (Not found) if an empty image stream is detected

* 2012-10-01 - francisco.laguna@open-xchange.com

 - Fix for bug 23134: Ported CVS fixes
 - Fix for bug 23135: Ported CVS fixes

* 2012-10-01 - thorben.betten@open-xchange.com

 - Fix for bug 23146: Log if unsupported charset is detected
 - Fix for bug 23148: Safe sanitizing of Content-Type header
 - Fix for bug 23149: Introduced limitation for number of accepted CSS block segments
 - Fix for bug 23084: Grab HTML content if only text part available

* 2012-09-29 - thorben.betten@open-xchange.com

 - Fix for bug 23141: Introduced special FileCleaningTracker which invokes File.deleteOnExit() on each incoming file upload
 - Fix for bug 23139: Configuration option whether to prefer GSSAPI authentication mechanism if supported by SIEVE backend
 - Fix for bug 23042: Sanitize Content-Type header prior to writing a message's content