@@ -1,3 +1,8 @@
+* 2012-10-05 - tobias.friedrich@open-xchange.com
+
+ - Fix for bug 23184: Corrected attachment condition
+ - Fix for bug 23174: Send SC_CONFLICT when trying to create an appointment with already existing UID 
+ 
 * 2012-10-04 - thorben.betten@open-xchange.com
 
  - Fix for bug 23170: Restored class' path
